--- a/src/components/single-post.css
+++ b/src/components/single-post.css
@@ -1,12 +1,13 @@
 .single-post {
   box-shadow: 0 0 15px var(--shadow);
   background-color: white;
-  max-width: 100%;
-  padding: 30px 50px 20px 50px;
+  /*max-width: 100%;*/
+  padding: 10px 30px 20px 30px;
   box-sizing: border-box;
   font-family: 'Source Serif Pro', serif;
   color: #292929;
-  margin: 0 20px;
+  /*margin: 0 20px;*/
+  /*margin: 0 auto;*/
 }
 
 .single-post p {
@@ -62,6 +63,15 @@
   align-items: baseline;
 }
 
+.single-post-tag-list {
+  width: 60%;
+}
+
+.single-post-stats {
+  width: 40%;
+  text-align: right;
+}
+
 .single-post-footer-value,
 .single-post-footer-votes {
   font-weight: bold;
@@ -69,10 +79,16 @@
   margin-right: 15px;
 }
 
+@media only screen and (min-width: 500px) {
+  .single-post {
+    padding: 30px 50px 20px 50px;
+  }
+}
+
 @media only screen and (min-width: 710px) {
   .single-post {
     max-width: 700px;
-    margin: 0;
+    /*margin: 0;*/
   }
 }
 
