--- a/src/components/tag-list.css
+++ b/src/components/tag-list.css
@@ -50,7 +50,7 @@
 
 @media only screen and (min-width: 1080px) {
   .top-tag-list {
-    max-width: 1040px;
+    max-width: 1060px;
   }
 }
 
